Removed  hard coded domain

--- a/Uploader/lapis/nginx.conf
+++ b/Uploader/lapis/nginx.conf
@@ -13,7 +13,7 @@ http {
   resolver_timeout 10s;
   server {
     listen ${{PORT}};
-    server_name elperson.pro
+    server_name ${DOMAIN}
     access_log off;
     lua_code_cache ${{CODE_CACHE}};
     client_max_body_size 100M;
