Changed setting domain env

--- a/Uploader/lapis/nginx.conf
+++ b/Uploader/lapis/nginx.conf
@@ -2,7 +2,7 @@ worker_processes ${{NUM_WORKERS}};
 error_log stderr notice;
 daemon off;
 pid logs/nginx.pid;
-env DOMAIN=YOURDOMAIN.TLD; # Do not remove the ;
+env DOMAIN;
 events {
   worker_connections 1024;
 }
