Added admin panel url shortener and a lot in general

--- a/Uploader/lapis/nginx.conf
+++ b/Uploader/lapis/nginx.conf
@@ -2,7 +2,6 @@ worker_processes ${{NUM_WORKERS}};
 error_log stderr notice;
 daemon off;
 pid logs/nginx.pid;
-env DOMAIN;
 events {
   worker_connections 1024;
 }
@@ -11,6 +10,13 @@ http {
   include mime.types;
   resolver 127.0.0.11;
   resolver_timeout 10s;
+  error_page 404 /static/404.html;
+  init_by_lua_block {
+    require("lpeg")
+    require("socket")
+  }
+  init_worker_by_lua_file sessclear.lua;
+  
   server {
     listen ${{PORT}};
     server_name _;
@@ -19,7 +25,6 @@ http {
     client_max_body_size 100M;
     location / {
       default_type text/html;
-      autoindex on;
 	  content_by_lua_block {
         require("lapis").serve("app")
       }
@@ -28,13 +33,13 @@ http {
 	 internal;
 	}
 
-	
+	location /static/ {
+      autoindex on;
+    }
 
  }
 
-    location /static/ {
-      alias static/;
-    }
+    
 
     location /favicon.ico {
       alias static/favicon.ico;
