--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - POSTGRES_DB=uploader # Use lowercase.
       - POSTGRES_USER=admin # Use lowercase.
-      - POSTGRES_PASSWORD=Pj+5K]hDT:FT>(8. # CHANGE THIS TO SOMETHING LONG.
+      - POSTGRES_PASSWORD=dqRcBKPe2Kjov0mHvXGQ # CHANGE THIS TO SOMETHING LONG.
   web:
     volumes:
       - ./Uploader:/srv
@@ -19,3 +19,13 @@ services:
       - "80:8080"
     depends_on:
       - db
+  bot:
+    volumes:
+      - ./Bot:/srv
+    build: ./Bot
+    environment: 
+      - TOKEN=ODUyNTY1NjQ1ODYxMzIyNzgy.YMIroQ.W2JWOjK_p2QLFjidadfbzlx_g7s
+      - DBPASS=dqRcBKPe2Kjov0mHvXGQ
+    depends_on: 
+      - db
+      - web
